Noto Sans change

--- a/src/print.css
+++ b/src/print.css
@@ -1,5 +1,9 @@
 /* Ensure styles apply only to printed pages */
 @media print {
+
+  body {
+    font-family: 'Noto Sans', sans-serif !important;
+  }
   .hidden-on-screen {
     display: block; /* Show only during printing */
   }
@@ -54,7 +58,7 @@
     color: #000;
     text-align: right;
     /* Print/Headings/Form Title */
-    font-family: "Noto Sans";
+    font-family: 'Noto Sans';
     font-size: 14px;
     font-style: normal;
     font-weight: 600;
@@ -76,7 +80,7 @@
     color: #000;
     text-align: right;
     /* Print/Body/Label */
-    font-family: "Noto Sans";
+    font-family: 'Noto Sans';
     font-size: 11px;
     font-style: normal;
     font-weight: 300;
@@ -138,7 +142,7 @@
   .group-item-container {
     page-break-inside: avoid;
     font-weight: normal;
-    font-family: "Noto Sans" !important;
+    font-family: 'Noto Sans' !important;
     font-size: 13px !important;
     gap: 0px !important; /* Adjust gap for print */
     padding: 0px !important;
@@ -225,7 +229,7 @@
     flex-wrap: wrap;
     flex: 1;
     align-content: center;
-    font-family: "Noto Sans";
+    font-family: 'Noto Sans';
   }
 
   .help-text {
@@ -277,6 +281,7 @@
     flex-wrap: wrap;
     align-items: flex-start;
     gap: 10px;
+    min-height: 0px !important;
   }
 
   .common-container {
@@ -313,7 +318,7 @@
 
   .field-label-print {
     color: #000;
-    font-family: "Noto Sans";
+    font-family: 'Noto Sans';
     font-size: 11px;
     font-style: normal;
     font-weight: 300;
@@ -347,7 +352,7 @@
     color: #000;
 
     /* Print/Headings/Heading 2 */
-    font-family: "Noto Sans" !important;
+    font-family: 'Noto Sans' !important;
     font-size: 13px !important;
     font-style: normal !important;
     font-weight: 600 !important;
@@ -355,7 +360,7 @@
     margin-top: 20px;
   }
   .text-block {
-    font-family: "Noto Sans" !important;
+    font-family: 'Noto Sans' !important;
     font-size: 11px !important;
     font-style: normal !important;
   }
