--- a/src/page.scss
+++ b/src/page.scss
@@ -219,40 +219,36 @@ margin-top: 15px;
 margin-bottom: 25px;
 }
 .header-form-id {
-  display: flex;
-  width: 1440px;
-  padding: 24px 220px 16px 270px;
-  align-items: center;
+  display: flex;  
   background: #ECEAE8;
   color: #525252;
-/* Web/Body/Label */
-font-family: "BC Sans";
-font-size: 16px;
-font-style: normal;
-font-weight: 700;
-line-height: 150%; /* 24px */
-letter-spacing: 0.32px;
+  font-family: "BC Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 24px */
+  letter-spacing: 0.32px;
+  width: 100%;  
+  flex-wrap: wrap;  
+  gap: 10px; 
+  margin: auto;
+  min-height: 70px;
+  height: auto;
 } 
 
-
-
-.form-id-section {
+.form-id-section { 
+  display: flex;
+  width: 100%;
+  padding: $outer-padding;  
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: flex-start;
-
-  width: 100%;
-  max-width: 836px;
-  margin: 0 auto;
-  padding: $outer-padding;  
-
   gap: 10px;
-  
-
-  // Optional:
-  // min-height: 70px; // if you want a minimum height
+  max-width: 836px;
+  margin: auto;  
 }
+
+
 .group-header {
   color: #000;
 font-family: $default-font-family;
