--- a/src/page.scss
+++ b/src/page.scss
@@ -28,16 +28,21 @@ $label-font-weight:var(--label-font-weight);
 $label-font-style: var(--label-font-style);
 
 // Mixins
-@mixin button-style($bg-color, $border-color, $text-color) {
+@mixin button-style($bg-color: null, $border-color : null, $text-color) {
   display: flex;
   height: 40px;
-  padding:  6px, 12px;
+  padding:  6px 12px;
   justify-content: center;
   align-items: center;
-  gap:  8px;
-  border-radius:  4px;
-  border: 1px solid $border-color;
-  background: $bg-color;
+  gap:  8px;  
+  @if $bg-color != null {
+    background: $bg-color;
+  }
+  @if $border-color != null {
+    border-radius:  4px;  
+    border: 1px solid $border-color;
+  }
+  
   color: $text-color;
   text-align: center;
   font-family: $default-font-family;
@@ -99,6 +104,7 @@ line-height: 125%; /* 40px */
   //background-color: #fff; /* Optional: Set a background color */
   //box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow */
   flex-wrap: wrap; 
+  background: $fixed-bg-color;
 }
 .scrollable-content {
   margin-top: 0; 
@@ -410,7 +416,26 @@ background: #F2F2F2;
   //justify-content: flex-end; /* Align buttons to the right */
   gap: 12px; /* Maintain spacing between buttons */
     button {
-      @include button-style( $fixed-bg-color, #353433 ,#2D2D2D)
-      ;
+      @include button-style( null, #353433 ,#2D2D2D);
+    }
+}
+
+.custom-buttons-only {
+  display: flex;
+  flex-wrap: wrap; /* Allow wrapping of buttons on smaller screens */
+  //justify-content: flex-end; /* Align buttons to the right */
+  gap: 12px; /* Maintain spacing between buttons */
+    button {
+      @include button-style( null, #353433 ,#2D2D2D);
+    }
+}
+
+.custom-buttons-no-bg {
+  display: flex;
+  flex-wrap: wrap; /* Allow wrapping of buttons on smaller screens */
+  //justify-content: flex-end; /* Align buttons to the right */
+  gap: 12px; /* Maintain spacing between buttons */
+    button {
+      @include button-style( null, null ,#2D2D2D);
     }
 }
