--- a/src/page.scss
+++ b/src/page.scss
@@ -317,6 +317,10 @@ background: #F2F2F2;
   }
 }
 
+.text-block h1 {
+  font-size: 32px;
+  font-weight: 700;    
+}
 .text-block h2 {
   font-size: 28px;
     font-weight: 700;
